fixed buttons to not respond to arrow usage and confuse game logic. switched timing function to use request animation frame for smoother gameplay. fixed initail shapes not showing for first second of game.

--- a/speedShapesGame.css
+++ b/speedShapesGame.css
@@ -76,7 +76,9 @@
 	content: ''; 
 }
 
-
+#timer-column {
+	width: 240px;
+}
 
 
 
